[package]
name = "kassantra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kassantra"
path = "src/main.rs"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[dependencies.tokio]
version = "1.32.0"
features = ["full"]
[dependencies.nom]
version = "7.1.3"
[dependencies.rand]
version = "0.8.5"